--- a/project.properties
+++ b/project.properties
@@ -8,4 +8,4 @@ long.name = Swift
 # stable branch should be a change of version number)
 version = svn
 project = Swift workflow system
-lib.deps = gvds.*, antlr*.*, jsr173_1.0_api.*, resolver.*, stringtemplate.*, vdldefinitions.*, xbean.*, xbean_xpath.*, jug*.*, jaxrpc*.*, jline*.jar
+lib.deps = antlr*.*, jsr173_1.0_api.*, resolver.*, stringtemplate.*, vdldefinitions.*, xbean.*, xbean_xpath.*, jug*.*, jaxrpc*.*, jline*.jar
