--- a/cog/modules/abstraction-common/.classpath
+++ b/cog/modules/abstraction-common/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="lib" path="etc"/>
 	<classpathentry kind="lib" path="lib/castor-0.9.6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util"/>
-	<classpathentry exported="true" kind="lib" path="lib/backport-util-concurrent.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jglobus"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j-1.2.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/backport-util-concurrent"/>
 	<classpathentry kind="output" path=".build"/>
 </classpath>
